--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         </section>
 
         <footer style="margin-bottom:-900px;">
-        <h6 style="text-align: center;">&copy Designed By Harsh Hatel</h6>
+        <h6 style="text-align: center;">&copy Designed By Udit Srivastava</h6>
         </footer>
 
         <!-- load JS files -->
