--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
                                 <p class="m-b-mid">{{site.bio-oneliner}}</p>
                                 <div><img class="img responsive" src="bg.png" height="200" width="200" border="black" style="margin-top: -30px;"></div> 
                                 <div style="margin-top: 40px;"></div>                              
-                                <a href="{{site.social-sites.facebook}}" class="tm-social-icon-link"><i class="fa fa-facebook tm-social-icon"></i></a>
+                                <a href="https://www.facebook.com/shaitanudit.srivastava" class="tm-social-icon-link"><i class="fa fa-facebook tm-social-icon"></i></a>
                                 <a href="{{site.social-sites.instagram}}" class="tm-social-icon-link"><i class="fa fa-instagram tm-social-icon"></i></a>
                                 <a href="{{site.social-sites.twitter}}" class="tm-social-icon-link"><i class="fa fa-twitter tm-social-icon"></i></a>
                                 <a href="{{site.social-sites.github}}" class="tm-social-icon-link"><i class="fa fa-github tm-social-icon"></i></a>
