--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,9 @@
                                 <div><img class="img responsive" src="bg.png" height="200" width="200" border="black" style="margin-top: -30px;"></div> 
                                 <div style="margin-top: 40px;"></div>                              
                                 <a href="https://www.facebook.com/shaitanudit.srivastava" class="tm-social-icon-link"><i class="fa fa-facebook tm-social-icon"></i></a>
-                                <a href="{{site.social-sites.instagram}}" class="tm-social-icon-link"><i class="fa fa-instagram tm-social-icon"></i></a>
-                                <a href="{{site.social-sites.twitter}}" class="tm-social-icon-link"><i class="fa fa-twitter tm-social-icon"></i></a>
-                                <a href="{{site.social-sites.github}}" class="tm-social-icon-link"><i class="fa fa-github tm-social-icon"></i></a>
+                                <a href="https://www.instagram.com/udit_srivastav/" class="tm-social-icon-link"><i class="fa fa-instagram tm-social-icon"></i></a>
+                                <a href="https://twitter.com/Udit9519" class="tm-social-icon-link"><i class="fa fa-twitter tm-social-icon"></i></a>
+                                <a href="http://github.com/uditsrivastava" class="tm-social-icon-link"><i class="fa fa-github tm-social-icon"></i></a>
                                 
                                 
                                                     
